cleanup and update of the code to the current style